<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_rename"
        android:title="@string/menu_rename" />
    <item
        android:id="@+id/menu_delete"
        android:title="@string/menu_delete" />

    <item
        android:id="@+id/menu_details"
        android:title="@string/menu_details" />

    <item
        android:id="@+id/menu_set_ringtone"
        android:title="@string/menu_set_ringtone" />

    <item
        android:id="@+id/menu_add_to_playlist"
        android:title="@string/menu_add_to_playlist" />

    <item
        android:id="@+id/menu_add_to_fav"
        android:title="@string/menu_add_to_fav" />

    <item
        android:id="@+id/menu_share"
        android:title="@string/menu_share" />
</menu>