<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="0.9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_close"
            android:id="@+id/img_close_dialog"/>

        <TextView
            android:text="@string/txt_title_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:id="@+id/txt_title_filter"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_abc_music"
                android:layout_weight="1"

                android:layout_gravity="center"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="2"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/checkb_az"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rbtn_a_z"/>

                <RadioButton
                    android:id="@+id/checkb_za"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rbtn_z_a"/>
            </RadioGroup>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/recycler_view_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="0.1"
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:text="@string/btn_dialog_filter_accept"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_dialog_filter_accept"/>
    </LinearLayout>
</LinearLayout>