<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/bottomSheet"
    android:padding="8dp">

    <TextView
        android:id="@+id/txt_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/txt_song_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_song_name_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_details"
        android:textStyle="bold"
        android:layout_marginTop="32dp" />

    <TextView
        android:id="@+id/txt_song_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        app:layout_constraintStart_toEndOf="@+id/txt_song_name_title"
        app:layout_constraintTop_toBottomOf="@+id/txt_details"
        android:layout_marginTop="32dp" />

    <TextView
        android:id="@+id/txt_album_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_album_title"
        app:layout_constraintStart_toStartOf="@+id/txt_song_name_title"
        app:layout_constraintTop_toBottomOf="@+id/txt_song_name_title"
        android:textStyle="bold"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/txt_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/txt_song_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_song_name"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/txt_duration_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_duration_title"
        app:layout_constraintStart_toStartOf="@+id/txt_album_title"
        app:layout_constraintTop_toBottomOf="@+id/txt_album_title"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/txt_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/txt_album"
        app:layout_constraintTop_toBottomOf="@+id/txt_album"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/txt_size_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/txt_size_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txt_duration_title"
        app:layout_constraintTop_toBottomOf="@+id/txt_duration_title" />

    <TextView
        android:id="@+id/txt_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txt_duration"
        app:layout_constraintTop_toBottomOf="@+id/txt_duration" />
</androidx.constraintlayout.widget.ConstraintLayout>