<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:id="@+id/layout_rename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:gravity="start|center">

        <ImageView
            android:id="@+id/img_rename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_edit" />

        <TextView
            android:id="@+id/txt_rename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/menu_rename" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_rename"
        android:orientation="horizontal"
        android:gravity="start|center">

        <ImageView
            android:id="@+id/img_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_delete" />

        <TextView
            android:id="@+id/txt_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/menu_delete"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_delete"
        android:orientation="horizontal"
        android:gravity="start|center">

        <ImageView
            android:id="@+id/img_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_info" />

        <TextView
            android:id="@+id/txt_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/menu_details" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_ringtone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_details"
        android:orientation="horizontal"
        android:gravity="start|center">

        <ImageView
            android:id="@+id/img_ringtone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_music" />

        <TextView
            android:id="@+id/txt_ringtone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/menu_set_ringtone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_ringtone"
        android:orientation="horizontal"
        android:gravity="start|center">

        <ImageView
            android:id="@+id/img_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_playlist" />

        <TextView
            android:id="@+id/txt_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/menu_add_to_playlist"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_fav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_playlist"
        android:orientation="horizontal"
        android:gravity="start|center">

        <ImageView
            android:id="@+id/img_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_fav" />

        <TextView
            android:id="@+id/txt_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/menu_add_to_fav"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_fav"
        android:orientation="horizontal"
        android:gravity="start|center">

        <ImageView
            android:id="@+id/img_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_share" />

        <TextView
            android:id="@+id/txt_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/menu_share"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_queue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_share"
        android:orientation="horizontal"
        android:gravity="start|center">

        <ImageView
            android:id="@+id/img_queue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_queue" />

        <TextView
            android:id="@+id/txt_queue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/menu_queue"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_change_cover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_queue"
        android:orientation="horizontal"
        android:gravity="start|center">

        <ImageView
            android:id="@+id/img_music_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_music_photo" />

        <TextView
            android:id="@+id/txt_change_cover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/menu_change_cover"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>